05-Module 3/7.kustomize/example-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: example.local # will be patched by kustomize
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app
                port:
                  number: 8080
